--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,7 +17,11 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-typewriter-hook": "^1.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-typist": "^2.0.3"
   }
 }
