--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -25,6 +25,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/marked": "^5.0.1",
     "@types/react-typist": "^2.0.3"
   }
 }
